# Job-Search-Chatbot

./: .env_example  .gitignore  AZURE_DEPLOYMENT.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  QUICK_REFERENCE.md  README.md  azure-deployment.yaml  deploy-azure.sh  docker-compose.yml  mcp_streamlit.py  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
Clients/: agent.py  config.py  mcp_slack.py  mcp_streamlit.py  prompts.py  streamlit_ui.py  utils.py
Clients/backend/: app.py  main.py  system_prompt.py
Servers/: docx_server.py  jobspy_server.py  server_capabilities.json  servers_config.json  servers_config_slack.json
